# plume_nav_sim

./: .flake8  .gitignore  .venv_setup_note.txt  CITATION.cff  LICENSE  Makefile  PHASE_0_COMPLETION_SUMMARY.md  PHASE_1_2_TEST_RESULTS.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_4_COMPLETION_SUMMARY.md  README.md  REFACTORING_PROGRESS.md  SIMPLIFICATION_PLAN.md  bandit-report.json  config_export.json  cv2.py  debug_info_diff.py  dvc.yaml  logging.yaml  params.yaml  plume_nav_sim.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-viz.txt  requirements.txt  setup_env.sh  test.txt  test_delegation_fix.py  tmp_state_cli.json
plug-and-play-demo/: README.md  main.py  plug_and_play_demo.ipynb  pyproject.toml
plug-and-play-demo/advanced/: benefits_demo.py  nback_demo.py
plug-and-play-demo/assets/: demo_10s.h5.plume-movie.yaml  demo_10s_provenance.json  gaussian_plume_demo.avi
plug-and-play-demo/assets/gaussian_plume_demo.zarr/: .zattrs  .zmetadata  manifest.json
plug-and-play-demo/assets/gaussian_plume_demo.zarr/concentration/: .zarray  .zattrs  0.0.0  0.0.1  0.1.0  0.1.1  1.0.0  1.0.1  1.1.0  1.1.1  2.0.0  2.0.1  2.1.0  2.1.1  3.0.0  3.0.1  3.1.0  3.1.1  4.0.0  4.0.1  4.1.0  4.1.1  5.0.0  5.0.1  5.1.0  5.1.1  6.0.0  6.0.1  6.1.0  6.1.1  7.0.0  7.0.1  7.1.0  7.1.1
plug-and-play-demo/configs/: simulation_spec.json  simulation_spec.toml  simulation_spec.yaml  simulation_spec_builtin.json  simulation_spec_movie.json
plug-and-play-demo/plug_and_play_demo/: __init__.py  debugger.py  policy_skeleton.py  stateless_policy.py
src/backend/: .git-commit-msg.txt  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRACTS.md  CONTRACTS_V2_PLAN.md  CONTRACT_TEST_SUMMARY.md  CONTRIBUTING.md  DEEP_INVESTIGATION_RESULTS.md  EXTENDING.md  PHASE3_COMPLETE_SUMMARY.md  PHASE3_FINAL_SUMMARY.md  PHASE3_PROGRESS.md  PHASE5_CRITICAL_FIXES_SUMMARY.md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  REMAINING_TEST_ANALYSIS.md  SEMANTIC_AUDIT.md  SEMANTIC_MODEL.md  SESSION_SUMMARY.md  TESTING_GUIDE.md  TEST_TAXONOMY.md  codecov.yml  commit-phase3.sh  conda-lock.yml  environment.yml  mypy.ini  psutil.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
src/backend/.github/: pull_request_template.md
src/backend/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/backend/.github/workflows/: performance.yml  publish.yml  tests.yml
src/backend/.mpl/: fontlist-v390.json
src/backend/.pytest_cache/: .gitignore
src/backend/assets/: __init__.py  default_colormap.py  render_templates.py
src/backend/benchmarks/: __init__.py  environment_performance.py
src/backend/conf/: README.md  config.yaml  constants.yaml
src/backend/conf/data_capture/: config.yaml
src/backend/conf/experiment/: antennae_array.yaml  dense_oriented.yaml  sparse_simple.yaml  step_penalty_oriented.yaml
src/backend/conf/movie/: default.yaml
src/backend/config/: __init__.py  __main__.py  constants.yaml  default_config.py  environment_configs.py  render_configs.py  test_configs.py
src/backend/contracts/: CONTRACT_VERIFICATION.md  OBSERVATION_DESIGN_SUMMARY.md  action_processor_interface.md  component_interfaces.md  concentration_field.md  core_types.md  environment_state_machine.md  gymnasium_api.md  media_time_mapping.md  observation_model_interface.md  policy_interface.md  reward_function.md  reward_function_interface.md  zarr_chunking_compression.md
src/backend/data/: __init__.py  benchmark_data.py  example_configs.py  test_scenarios.py
src/backend/docs/: CONSTANTS.md  DI_DEFAULT_MIGRATION_PLAN.md  MIGRATION_COMPONENT_ENV.md  ROADMAP.md  __init__.py  api_reference.py  configuration_reference.md  data_capture_schemas.md  data_capture_versioning.md  data_catalog_capture.md  data_directories_overview.md  data_zoo.md  debugger_friendly.md  debugger_usage.md  demo_capture_mode.md  developer_guide.py  ops_runbook_data_capture.md  plume_types.md  rendering.md  shim_evaluation.md  type_system_overview.md  user_guide.py  video_plume_manifest.md
src/backend/docs/archive/: SEMANTIC_AUDIT.md
src/backend/examples/: __init__.py  basic_usage.py  component_di_usage.py  custom_components.py  custom_configuration.py  gymnasium_integration.py  manual_control.py  movie_plume_smoke.py  quickstart.py  random_agent.py  reproducibility.py  reproducibility_demo.py  save_video_example.py  temporal_gradient_agent.py  visualization_demo.py
src/backend/gymnasium/: __init__.py
src/backend/gymnasium_vendored/: __init__.py
src/backend/logging/: __init__.py  config.py  formatters.py  loggers.py
src/backend/metadata/: video_dataset_contract.md
src/backend/plume_logging/: __init__.py  config.py  formatters.py  loggers.py
src/backend/plume_nav_sim/: __init__.py  _compat.py  constants.py  wind_field.py
src/backend/psutil/: __init__.py
src/backend/scenarios/: __init__.py  benchmark_data.py  example_configs.py  test_scenarios.py
src/backend/scripts/: __init__.py  clean_cache.py  generate_docs.py  ingest_capture.py  run_tests.py  strip_notebook_outputs.py  validate_constants_drift.py  validate_installation.py
src/backend/templates/: README.md  action_processor_template.py  observation_model_template.py  reward_function_template.py
src/backend/tests/: REMAINING_TESTS_EXECUTIVE_SUMMARY.md  REMAINING_TEST_ANALYSIS.md  REPRODUCIBILITY_TRACKER_REDESIGN.md  REPRODUCIBILITY_TRACKER_TEST_ANALYSIS.md  SEEDING_CONTRACT_ANALYSIS.md  SEEDING_DESIGN_CHECKLIST.md  SEEDING_REFACTOR_SUMMARY.md  SEEDING_SEMANTIC_MODEL.md  SEEDING_SIMPLIFICATION.md  SEEDING_TEST_STATUS.md  SEMANTIC_MODEL_VALIDATION.md  TEST_FIX_PROGRESS.md  TEST_SUITE_YAGNI_ANALYSIS.md  __init__.py  conftest.py  strategies.py  test_edge_cases.py  test_env_utils_helper.py  test_environment_api.py  test_environment_performance_api.py  test_error_handling.py  test_integration.py  test_performance.py  test_registration.py  test_registration_core_spec.py  test_rendering.py  test_seeding.py
(+900 files in other folders)
