[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plug-and-play-demo"
version = "0.0.0"
description = "Plug-and-play demo package for plume_nav_sim (policies + ODC plugin)"
requires-python = ">=3.9"
authors = [{ name = "plume_nav_sim maintainers" }]
dependencies = []

[project.entry-points."plume_nav_sim.debugger_plugins"]
plug_and_play_demo = "plug_and_play_demo.debugger:provider_factory"

[tool.setuptools.packages.find]
where = ["."]
include = ["plug_and_play_demo*"]
