[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "plume-nav-sim"
version = "0.0.1"
description = "Proof-of-life Gymnasium-compatible reinforcement learning environment for plume navigation research"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "plume_nav_sim Development Team", email = "plume-nav-sim@example.com"}
]
maintainers = [
    {name = "plume_nav_sim Development Team", email = "plume-nav-sim@example.com"}
]
keywords = [
    "reinforcement learning",
    "gymnasium", 
    "plume navigation",
    "chemical plume",
    "simulation",
    "robotics",
    "autonomous navigation",
    "olfactory navigation",
    "scientific computing"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=2.1.0",
    "matplotlib>=3.9.0"
]

[project.urls]
Homepage = "https://github.com/plume-nav-sim/plume_nav_sim"
Documentation = "https://plume-nav-sim.readthedocs.io"
Repository = "https://github.com/plume-nav-sim/plume_nav_sim.git"
Issues = "https://github.com/plume-nav-sim/plume_nav_sim/issues"
Changelog = "https://github.com/plume-nav-sim/plume_nav_sim/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0", 
    "pytest-xdist>=3.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "isort>=5.12.0"
]
security = [
    "bandit>=1.7.0",
    "safety>=2.0.0"
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0", 
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0"
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinxcontrib-napoleon>=0.7"
]
benchmark = [
    "pytest-benchmark>=4.0.0",
    "memory-profiler>=0.61.0",
    "psutil>=5.9.0"
]

[project.scripts]
plume-nav-validate = "plume_nav_sim.scripts:validate_installation"
plume-nav-benchmark = "plume_nav_sim.scripts:run_benchmarks"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: marks unit tests",
    "integration: marks integration tests", 
    "performance: marks performance tests",
    "slow: marks slow running tests"
]

[tool.coverage.run]
source = ["plume_nav_sim"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "conftest.py",
    "*/examples/*",
    "*/benchmarks/*",
]
branch = true
parallel = true
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"
skip_covered = false

[tool.coverage.xml]
output = "coverage.xml"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    build
  | dist
  | \.tox
)/
'''

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501", "F401"]
exclude = [".git", "__pycache__", "build", "dist", ".tox", ".pytest_cache", "*.egg-info"]
select = ["E", "W", "F", "C"]
max-complexity = 10
per-file-ignores = ["__init__.py:F401", "tests/*:F401,F811", "examples/*:F401,E402", "conftest.py:F401"]
count = true
statistics = true

[tool.bandit]
exclude_dirs = ["tests", "build", "dist", ".tox", ".pytest_cache"]
skips = ["B101", "B601"]
severity = "medium"
confidence = "medium"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true