[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "plume-nav-sim"
version = "0.1.0"
description = "Proof-of-life Gymnasium-compatible reinforcement learning environment for plume navigation research"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "plume_nav_sim Development Team", email = "plume-nav-sim@example.com"}
]
maintainers = [
    {name = "plume_nav_sim Development Team", email = "plume-nav-sim@example.com"}
]
keywords = [
    "reinforcement learning",
    "gymnasium",
    "plume navigation",
    "chemical plume",
    "simulation",
    "robotics",
    "autonomous navigation",
    "olfactory navigation",
    "scientific computing"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=2.1.0",
    "matplotlib>=3.9.0",
    "pydantic>=2.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "h5py>=3.11.0",
    "typing_extensions>=4.7.0",
]

[project.urls]
Homepage = "https://github.com/SamuelBrudner/plume_nav_sim"
Documentation = "https://plume-nav-sim.readthedocs.io"
Repository = "https://github.com/SamuelBrudner/plume_nav_sim.git"
Issues = "https://github.com/SamuelBrudner/plume_nav_sim/issues"
Changelog = "https://github.com/SamuelBrudner/plume_nav_sim/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "flake8-bugbear>=24.0.0",
    "flake8-comprehensions>=3.14.0",
    "mypy>=1.8.0",
    "isort>=5.12.0",
    "tomli>=2.0.1",
    "types-requests",
    "types-setuptools"
]
security = [
    "bandit>=1.7.0",
    "safety>=2.0.0"
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "hypothesis>=6.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0"
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinxcontrib-napoleon>=0.7",
    "nbformat>=5.10.0",
    "nbconvert>=7.0.0",
]
benchmark = [
    "pytest-benchmark>=4.0.0",
    "memory-profiler>=0.61.0",
    "psutil>=5.9.0"
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipympl>=0.9",
    "ipywidgets>=8.0.0",
    "seaborn>=0.13.0"
]
data = [
    "orjson>=3.9.0",
    "pandas>=2.2.0; python_version>='3.10'",
    "pyarrow>=14.0.0; python_version>='3.10'",
    "pandera>=0.18.0",
]
ops = [
    "loguru>=0.7.0",
]

gui = [
    "PySide6>=6.7.0",
]

# Media / video export (GIF/MP4)
media = [
    "imageio>=2.31.0",
    "pillow>=10.0.0",
    # For MP4 writing via imageio; requires system ffmpeg otherwise
    "imageio-ffmpeg>=0.4.9",
    "xarray>=2024.1.0",
    "zarr>=2.16.0",
    "numcodecs>=0.12.0",
]

[project.scripts]
plume-nav-validate = "plume_nav_sim.scripts:validate_installation"
plume-nav-benchmark = "plume_nav_sim.scripts:run_benchmarks"
plume-nav-constants-check = "scripts.validate_constants_drift:main"
plume-nav-capture = "plume_nav_sim.cli.capture:main"
plume-nav-video-ingest = "plume_nav_sim.cli.video_ingest:main"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src/backend"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: marks unit tests",
    "integration: marks integration tests",
    "performance: marks performance tests",
    "slow: marks slow running tests"
]

[tool.coverage.run]
source = ["plume_nav_sim"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "conftest.py",
    "*/examples/*",
    "*/benchmarks/*",
]
branch = true
parallel = true
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"
skip_covered = false

[tool.coverage.xml]
output = "coverage.xml"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    build
  | dist
  | \.tox
)/
'''

[tool.isort]
profile = "black"

[tool.ruff]
# Keep Ruff aligned with Black/Isort targets
target-version = "py310"
line-length = 88

# Avoid linting documentation and demo code that embeds example snippets
extend-exclude = [
    "docs/",
    "examples/",
    "benchmarks/",
    "tests/",
    "src/backend/tests/",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E203", "F401"]

[tool.ruff.lint.per-file-ignores]
# The user guide intentionally embeds code snippets inside strings; avoid false positives
"docs/user_guide.py" = ["F401", "F821", "F841"]
"__init__.py" = ["F401", "F403", "F405"]
"tests/*" = ["F401", "F811"]
"src/backend/tests/*" = ["F401", "F811"]
"examples/*" = ["F401", "E402"]
"conftest.py" = ["F401"]
"plume_nav_sim/plume/__init__.py" = ["E402"]
"plume_nav_sim/core/episode_manager.py" = ["F811"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501", "F401"]
exclude = [".git", "__pycache__", "build", "dist", ".tox", ".pytest_cache", "*.egg-info"]
select = ["E", "W", "F", "C"]
max-complexity = 10
per-file-ignores = ["__init__.py:F401,F403,F405", "tests/*:F401,F811", "examples/*:F401,E402", "conftest.py:F401"]
count = true
statistics = true

[tool.bandit]
exclude_dirs = ["tests", "build", "dist", ".tox", ".pytest_cache"]
skips = ["B101", "B601"]
severity = "medium"
confidence = "medium"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.commitizen]
# Conventional Commits adapter and release configuration
name = "cz_conventional_commits"

# Keep this in sync with [project].version; Commitizen updates both via version_files
version = "0.1.0"

# Git tag configuration
tag_format = "v$version"
annotated_tag = true
tag_message = "chore(release): $version"

# Changelog generation
update_changelog_on_bump = true
changelog_file = "src/backend/CHANGELOG.md"

# Files whose version strings are updated during `cz bump`
# Using file paths allows Commitizen to locate and update standard version keys
version_files = [
  "src/backend/pyproject.toml",
  "src/backend/conf/constants.yaml",
]

# Commit message used for version bumps
bump_message = "chore(release): bump version $current_version → $new_version"
